# Focus-Timer

./: .gitignore  DELIVERY.md  DOCUMENTATION.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
scripts/: clean.js  gen-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  engine.rs  main.rs  tray.rs  windows.rs
src/main/: index.ts  ipc.ts  notifications.ts  store.ts  updater.ts  windows.ts
src/main/engine/: TimerEngine.ts
src/preload/: index.ts
src/renderer/: float.html  index.html
src/renderer/src/: App.tsx  FloatApp.tsx  env.d.ts  float.tsx  main.tsx  tauri-bridge.ts  theme.css
src/renderer/src/alarm/: synth.ts
src/renderer/src/components/: Controls.tsx  ProgressRing.tsx  SessionBadge.tsx  Settings.tsx
src/renderer/src/hooks/: useAlarm.ts  useTimer.ts
src/renderer/src/lib/: format.ts
src/shared/: types.ts
tests/: engine.test.ts
