[package]
name = "focus-timer"
version = "1.0.0"
description = "Focus Timer — a Windows 11 Pomodoro app with a floating always-on-top mini-window."
authors = ["Focus Timer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-single-instance = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
